// 显示声明使用proto3, 否则使用默认的proto2
syntax = "proto3";

// 生成类的包名
option java_package = "com.banyue.grpc.dept";
// 生成类的文件名，否则默认生成的类名为proto文件名的驼峰命名
option java_outer_classname = "DeptProto";
// 定义的所有消息、枚举和服务生成对应的多个类文件，而不是以内部类的形式出现
option java_multiple_files = true;

import "bean/BaseBean.proto";

import "google/protobuf/any.proto";

// 服务定义
service DeptService {
  // 方法，格式为"方法名 请求参数 返回参数"
  rpc queryDeptList (DeptRequest) returns (DeptResponse) {}

  rpc sendAndReply (stream DeptRequest) returns (stream DeptResponse) {}
}

// 方法请求,包含用户名
message DeptRequest {
   int64 id = 1;
   string name = 2;
   BaseBean bean = 3;
}

// 方法响应,包含响应的消息
message DeptResponse {
  int64 code = 1;
  string message = 2;
  repeated Dept deptList = 3;
}

message Dept{
  string code = 1;
  string name = 2;
}
